syntax="proto3";
package token;
option go_package = "monorepo/services/auth-service/api/proto/token";

service TokenHandler {
	rpc ValidateToken (PayloadValidate) returns (ResponseValidation);
	rpc GenerateToken (UserData) returns (ResponseGenerate);
}

message Request {
    string Message=1;
}

message Response {
	string Message=1;
}

// Validate token payload
message PayloadValidate {
    string Token = 1;
}

message ResponseValidation {
    bool Success = 1;
	message ClaimData {
		string Audience = 1;
		int64 ExpiresAt = 2;
		int64 IssuedAt = 3;
		string Issuer = 4;
		int64 NotBefore = 5;
		string Subject = 6;
		string DeviceID = 7;
		UserData User = 8;
	}
	ClaimData Claim = 2;
}

message ResponseGenerate {
    bool Success = 1;

    message Token {
        string Token = 1;
        string RefreshToken = 2;
        ClaimData Claim = 3;
    }

    Token Data = 2;
}

message ClaimData {
	string Audience = 1;
	int64 ExpiresAt = 2;
	int64 IssuedAt = 3;
	string Issuer = 4;
	int64 NotBefore = 5;
	string Subject = 6;
	string DeviceID = 7;
	UserData User = 8;
}

message UserData {
	string ID = 1;
	string Username = 2;
}
