syntax="proto3";
package acl;
option go_package = "monorepo/services/master-service/api/proto/acl";

service AclHandler {
	rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
}

message CheckPermissionRequest {
    string UserID=1;
	string PermissionCode=2;
}

message CheckPermissionResponse {
	string RoleID=1;
}
